crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_album_tracks_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 977
description: "曲目列表:带 album 数据的 Full 档(title/artist/album 三列对齐)"
expression: t.backend()
---
"╭ ♫ netease tracks / EndSerenading ────────────────────────────────────────────╮"
"│    title                        artist             album               len   │"
"│▌   Bones                        HONNE              no song             3:30  │"
"│    Location Unknown             HONNE              Warm on a Cold Nigh 3:30  │"
"│    无                           草东没有派对       丑奴儿              3:30  │" Hidden by multi-width symbols: [(6, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (54, " "), (56, " "), (58, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ 1 / 3 ──────────────────────────────────────────────────────────────10m total╯"
