crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_alias_suffix_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 862
description: "曲目列表:歌名带译名别名,title 后缀暗色 (alias)"
expression: t.backend()
---
"╭ ♫ netease tracks / EndSerenading ────────────────────────────────────────────╮"
"│    title                        artist             album               len   ⢸"
"│    LoveLetterTypewriter         Mineral                                3:45  ⢸"
"│▌ ♥ Palisade                     Mineral                                4:31  ⢸"
"│    迷星叫 (Mayoiuta)            MyGO!!!!!          迷跡波              3:31  ⢸" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (54, " "), (56, " "), (58, " ")]
"│                                                                              ⢸"
"│                                                                              ⢹"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"╰ 2 / 3 ──────────────────────────────────────────────────────────────11m total╯"
