crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_cjk_tracks_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 942
description: "曲目列表:CJK 曲目(Chinese Football)Full 档宽字符对齐"
expression: t.backend()
---
"╭ ♫ netease tracks / Chinese Football ─────────────────────────────────────────╮"
"│    title                        artist             album               len   │"
"│▌   守门员                       Chinese Football                       3:53  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " ")]
"│    飞鱼转身                     Chinese Football                       3:53  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " ")]
"│    400米                        Chinese Football                       3:53  │" Hidden by multi-width symbols: [(9, " ")]
"│    不是人人都能穿十号球衣       Chinese Football                       3:53  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ 1 / 4 ──────────────────────────────────────────────────────────────15m total╯"
