crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_filtered_reorder_preserves_relation_indexes_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 702
description: "曲目列表:filter 按匹配分重排，歌名与选中行对齐"
expression: terminal.backend()
---
"╭ ♫ netease tracks / EndSerenading /ab─────────────────────╮"
"│    title               artist        album         len   │"
"│▌   AB                                              -:--  │"
"│    A distant B                                     -:--  │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"╰ 1 / 2 ───────────────────────────────────────────0m total╯"
