crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_loading_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 978
description: "曲目列表:选中歌单但曲目未到(loading)"
expression: t.backend()
---
"╭ ♫ netease tracks / EndSerenading ────────────────────────────────────────────╮"
"│    title                        artist             album               len   ⢸"
"│▌   loading…                                                                  ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"│                                                                              ⢸"
"╰ 0 / 0 ───────────────────────────────────────────────────────────────0m total╯"
