crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_mixed_source_column_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 924
description: "曲目列表:混源歌单 Full 档插 per-song source 徽标列"
expression: t.backend()
---
"╭ ◆ mineral tracks / Favorites ────────────────────────────────────────────────╮"
"│    title                   artist          album           source      len   │"
"│▌ ♥ LoveLetterTypewriter    Mineral                         ♫ netease   3:45  │"
"│  ♥ 夜間飛行                Chinese Footbal                 ▶ bilibili  -:--  │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " ")]
"│  ♥ Local Rip                                               □ local     -:--  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ 1 / 3 ───────────────────────────────────────────────────────────────3m total╯"
