crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_narrow_song_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 959
description: "曲目列表:窄面板退到 Song 档(只剩歌名,无 artist/album)"
expression: t.backend()
---
"╭ ♫ netease tracks / EndSerenading ────────╮"
"│    title                           len   │"
"│    LoveLetterTypewriter            3:45  │"
"│▌ ♥ Palisade                        4:31  │"
"│    Gjs                             4:46  │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"╰ 2 / 3 ──────────────────────────13m total╯"
