crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_search_no_match_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 896
description: "曲目列表:搜索零命中(表内「无匹配」占位行)"
expression: t.backend()
---
"╭ ♫ netease tracks / EndSerenading /zzz────────────────────────────────────────╮"
"│    title                        artist             album               len   │"
"│▌   无匹配                                                                    │" Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ 0 / 0 ───────────────────────────────────────────────────────────────0m total╯"
