crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/library_with_tracks_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/library.rs
assertion_line: 665
description: "曲目列表:EndSerenading 前 3 曲(♥ 收藏)"
expression: t.backend()
---
"╭ ♫ netease tracks / EndSerenading ────────────────────────────────────────────╮"
"│    title                        artist             album               len   │"
"│    LoveLetterTypewriter         Mineral                                3:45  │"
"│▌ ♥ Palisade                     Mineral                                4:31  │"
"│    Gjs                          Mineral                                4:46  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ 2 / 3 ──────────────────────────────────────────────────────────────13m total╯"
