crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/playlists_empty_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/playlists.rs
assertion_line: 699
description: "歌单列表:空态(未加载 / 未登录)"
expression: t.backend()
---
"╭ playlists ───────────────────────────╮"
"│                                      ⢸"
"│            还没有可用歌单            ⢸" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " ")]
"│                                      ⢸"
"│         登录一个音乐源,例如:         ⢸" Hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (26, " "), (28, " ")]
"│      mineral channel netease login   ⢸"
"│                                      ⢸"
"│        登录后重启 mineral 生效       ⢸" Hidden by multi-width symbols: [(10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (29, " "), (31, " ")]
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"╰ 0 / 0 ───────────────────────────────╯"
