crates/mineral-tui/src/components/layout/browse/sidebar/snapshots/playlists_list_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/browse/sidebar/playlists.rs
assertion_line: 407
description: "歌单列表:3 个混源歌单(EndSerenading / 本地)"
expression: t.backend()
---
"╭ playlists ───────────────────────────╮"
"│  name      source      length   items⢹"
"│▌ EndSerena ♫ netease   —        10   ⢸"
"│  The Power ♫ netease   —        8    ⢸"
"│  本地音乐  □ local     —        5    ⢸" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " ")]
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"│                                      ⢸"
"╰ 1 / 3 ───────────────────────────────╯"
